--- a/hightech-spring-api/src/main/resources/templates/index.html
+++ b/hightech-spring-api/src/main/resources/templates/index.html
@@ -4,13 +4,19 @@
 		<meta charset="UTF-8" />
 		<title>Insert title here</title>
 		
-		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0-rc.1/angular.min.js"></script>
-		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0-rc.1/angular-route.js"></script>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.js"></script>
 		<script type="text/javascript" src="./js/app.js"></script>
 		<script type="text/javascript" src="./js/controller/cliente-controller.js"></script>
+		<script type="text/javascript" src="./js/controller/estado-controller.js"></script>
+		<script type="text/javascript" src="./js/controller/cidade-controller.js"></script>
 	</head>
 	
 	<body>
+		<a href="/#/clientes">Clientes</a>
+		
+		<div ng-view="ng-view">
+		</div>
 	</body>
 	
 </html>
